cmake_minimum_required(VERSION 3.20)

set( CMAKE_CXX_COMPILER "g++")
set( CMAKE_C_COMPILER "gcc")

# set the project name
project(tmp1075_testing VERSION 0.1.0)

enable_testing()

# add_executable(conversion_tester_TMP1075 "./conversion_tester_TMP1075.cpp" "../src/TMP1075.cpp")
# add_test(Conversion_tester_TMP1075 conversion_tester_TMP1075)